ifdef::env-github[]
NOTE: Release notes are best read in our documentation at
https://www.elastic.co/guide/en/apm/agent/nodejs/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

* fix: Synchronous spans would never have `span.sync == true`. {pull}1879[#1879]

[float]
===== Breaking changes

[float]
===== Features

* feat: Set "destination" context on spans for "mongodb". {pull}1893[#1893] +
  This allows Kibana APM Service Maps to show a "mongodb" node for services using
  the https://www.npmjs.com/package/mongodb[mongodb] package (which includes
  mongoose and mongojs).

* feat: transactionIgnoreUrl wildcard matching {pull}1870[#1870] +
  Allows users to ignore URLs using simple wildcard matching patterns that behave
  the same across language agents. See https://github.com/elastic/apm/issues/144

* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

[[release-notes-3.8.0]]
==== 3.8.0 - 2020/11/09

[float]
===== Features

* feat: expand k8s pod ID discovery regex {pull}1863[#1863]
* feat: implements tracestate {pull}1828[#1828] +
  Expands support for the W3C Trace Context specification by adding a tracestate
  header implementation, and uses this new header to track the Elastic
  transaction sample rate across a trace's service boundaries.
* feat: add span and transaction outcome {pull}1824[#1824] +
  This adds an "outcome" field to HTTP(S)
  https://github.com/elastic/apm/blob/master/specs/agents/tracing-transactions.md#transaction-outcome[transactions]
  and https://github.com/elastic/apm/blob/master/specs/agents/tracing-spans.md#span-outcome[spans].

[float]
===== Bug fixes

* fix(pg): prevent unhandled promise rejection {pull}1846[#1846]
* fix: redis@2.x instrumentation was broken {pull}1852[#1852]
* A number of fixes to the test suite.

[[release-notes-3.7.0]]
==== 3.7.0 - 2020/8/10

* feat(knex): add support for 0.21.x {pull}1801[#1801]